sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:7: error: not found: value getPacakeRadius
      if(getPancakeRadius(j)>getPacakeRadius(max)){
                             ^